open_mx/log/build_2024-11-20_22-06-37/robot_omx/stderr.log
  File "/home/lucasb/OpenManipulatorXRoboticArmKinematics/open_mx/install/robot_omx/lib/python3.10/site-packages/robot_omx/robot_node.py", line 32
    while !self.within_tolerance(self.curr_pose, des_pose, 2):
          ^
SyntaxError: invalid syntax

